<resources>
    <string name="app_name">Tip</string>
    <string name="tip_time">Tip Time</string>
    <string name="image_of_pay">image of pay</string>
    <string name="cost_of_service">Input Cost of Service</string>
    <string name="how_was_the_service">How many tip you want to give?</string>
    <string name="twenty_percent">20%</string>
    <string name="fifteen_percent">15%</string>
    <string name="five_percent">5%</string>
    <string name="no_tip">0% No Tip</string>
    <string name="round_up_tip">round up your tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Rp. 0, -</string>
    <string name="tip_title">Total Bill</string>
</resources>