<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_time"
        style="@style/Theme.Tip.TextTitle"
        app:layout_constraintBottom_toTopOf="@id/image_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_pay"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_of_pay"
        android:src="@drawable/pay"
        app:layout_constraintBottom_toTopOf="@id/input_cost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_cost"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/cost_of_service"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@id/how_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_pay" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/how_service"
        android:text="@string/how_was_the_service"
        style="@style/Theme.Tip.Text"
        app:layout_constraintBottom_toTopOf="@id/tip_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_cost" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/tip_five_percent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/round_up_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_service">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tip_twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_percent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tip_fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen_percent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tip_five_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_percent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/tip_zero_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tip" />
    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tip_result_title"
        android:text="@string/tip_title"
        style="@style/Theme.Tip.TextSubTitle"
        app:layout_constraintTop_toBottomOf="@id/how_service"
        app:layout_constraintBottom_toTopOf="@id/tip_result"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tip_result"
        style="@style/Theme.Tip.TextSubTitle"
        android:text="@string/tip_amount"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tip_result_title"
        app:layout_constraintBottom_toBottomOf="@id/tip_options"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        style="@style/Theme.Tip.Switch"
        app:layout_constraintBottom_toTopOf="@id/calculate_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        style="@style/Theme.Tip.Button"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>